derive.at/static/styles.css
:root {
    --accent: #ae358b; /* (urbanize color) */
    --almost-white: #f7f7f7;
    --bg: #fff;
    --bg-footer: #f2f2f2;
    --beige: #ebe9e8;
    --fg-1: #000;
    --fg-2:#4a4a49;
    --fg-3: #767676;
    --grey: #d3cfcd;
    --header-width: 78rem;
    --shadow: rgba(153, 153, 153, .66); /* #999 */
    --width: 70rem;
}
@font-face {
    font-family: 'FunctionPro';
    src: url('/fonts/FunctionPro-Book.woff2') format('woff2');
    font-weight: 400;
    font-style: normal;
    size-adjust: 115%;
}
@font-face {
    font-family: 'FunctionPro';
    src: url('/fonts/FunctionPro-Demi.woff2') format('woff2');
    font-weight: 600;
    font-style: normal;
    size-adjust: 115%;
}
/* begin icons */
@font-face {
    font-family: 'icons';
    src: url('/fonts/icons.woff2?1793465') format('woff2');
    font-weight: normal;
    font-style: normal;
}
[class^="icon-"]:before, [class*=" icon-"]:before {
    font-family: "icons";
    font-style: normal;
    font-weight: normal;
    speak: none;
    display: inline-block;
    text-decoration: inherit;
    width: 1rem;
    margin-right: .2rem;
    text-align: center;
    font-variant: normal;
    text-transform: none;
    line-height: 1rem;
    margin-left: .2rem;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}
.icon-checkbox-checked:before { content: '\e804'; } /* '' */
.icon-play:before { content: '\e806'; } /* '' */
.icon-pause:before { content: '\e807'; } /* '' */
.icon-checkbox:before { content: '\f096'; } /* '' */
/* end icons */
audio { width: 100%; }
body, button, input, textarea {
    font-family: 'FunctionPro';
    line-height: 1.6;
}
button, input, textarea { font-size: 1rem; }
body {
    background-color: var(--bg);
    color: var(--fg-2);
    display: flex;
    flex-direction: column;
/*    font-size: 20px;*/
    margin: 0;
    min-height: 100dvh;
    scroll-behavior: smooth;
}
a {
    color: var(--fg-2);
    cursor: pointer;
    text-decoration: none;
}
a:focus-visible,
a:hover {
    color: var(--fg-3);
}
a.accent { color: var(--accent); }
a.accent:focus-visible,
a.accent:hover { color: var(--fg-2); }
.a__no-underline { text-decoration: none; }
.big_heading {
    font-size: 1.8rem;
    font-weight: 600;
    line-height: initial;
    margin-bottom: 1rem;
    margin-top: .5rem;
    overflow-wrap: break-word;
}
hr {
    border: none;
    border-top: 1px solid #979797;
    height: 0;
}
.hr__light { border-top: 1px solid #d3cfcd; }
img { max-width: 100%; }
small { display: block; }
strong { font-weight: 600; }
.article-panel {
    background-color: var(--almost-white);
    display: flex;
    justify-content: space-between;
    margin-bottom: 2rem;
    padding: 2rem;
}
.article-panel__abstract { width: 50%; }
.article-panel__info { width: calc(50% - 2rem); }
.article-panel__info-cover { width: 45%; }
.article-panel__info-details { width: 50%; }
.article-panel__info-split {
    display: flex;
    justify-content: space-between;
}
.author_split {
    display: flex;
    font-size: 1.1rem;
}
.author_split a { text-decoration: none; }
.author_split a:hover { color: var(--accent); }
.author_split > div:nth-child(1) { padding: 0 1rem; }
.author_split > div:nth-child(1) span {
    color: var(--accent);
    font-weight: 600;
}
.author_split > div:nth-child(2) { flex-grow: 1; }
.call_out_button {
    border-radius: .8em;
    display: inline-block;
    font-weight: 600;
    text-decoration: none;
    text-transform: uppercase;
}
.call_out_button:not(.inverse) {
    background-color: var(--fg-2);
    border: .2rem solid var(--fg-2);
    color: var(--bg);
    padding: .1em .3em;
}
.call_out_button:not(.inverse):focus-visible,
.call_out_button:not(.inverse):hover {
    background-color: var(--bg);
    color: var(--fg-2);
}
.call_out_button.inverse {
    background-color: var(--bg);
    border: none;
    color: var(--fg-2);
    padding: .3em .5em;
}
.call_out_button.inverse:focus-visible,
.call_out_button.inverse:hover {
    background-color: var(--fg-2);
    color: var(--bg);
}
.call_out_buttons_spaced {
    display: flex;
    flex-flow: wrap;
    column-gap: 2rem;
    row-gap: 1rem;
}
.extra_nav { position: relative; }
.displaced_anchor {
    position: relative;
    top: -11rem;
}
.extra_nav_widget {
    background-color: var(--bg);
    border-top: 1px solid var(--fg-2);
    display: flex;
    flex-direction: column;
    position: absolute;
    right: 0;
}
.extra_nav_widget:not(.active) { display: none; }
.extra_nav_widget a {
    border-bottom: 1px solid var(--fg-2);
    font-size: 1.25rem;
    padding: 0 .2rem;
    text-align: right;
    text-decoration: none;
    white-space: nowrap;
}
.extra_nav_widget a:focus-visible,
.extra_nav_widget a:hover {
    background-color: var(--fg-2);
    color: var(--bg);
}
.extra_nav_widget a.active:not(:focus-visible):not(:hover) { color: var(--accent); }
.feature_landscape p { font-size: 1.2rem; }
.feature_landscape.feature_split > a {
    aspect-ratio: 1.555;
    width: 50%;
}
.feature_landscape .feature_text { width: 50%; }
.feature_landscape:nth-child(2) { margin-top: 2rem; }
@media (max-width: 59.999rem) {
    .feature_landscape.feature_split { flex-direction: column; }
    .feature_landscape.feature_split > a { width: 100%; }
    .feature_landscape .feature_text { width: 100%; }
}
@media (min-width: 42.5rem) {
    .feature_landscape { grid-column: span 2; }
}
@media (min-width: 60rem) {
    .feature_landscape { grid-column: span 4; }
    .feature_landscape:nth-child(even).feature_split > a { order: 1; }
}
.feature_portrait.feature_split > a {
    aspect-ratio: .765;
    width: 50%;
}
.feature_portrait .feature_text { width: 50%; }
@media (max-width: 42.499rem) {
    .feature_portrait.feature_split { flex-direction: column; }
    .feature_portrait.feature_split > a { width: 100%; }
    .feature_portrait .feature_text { width: 100%; }
}
@media (min-width: 42.5rem) {
    .feature_portrait { grid-column: span 2; }
}
/* ... */

